--- a/application/application/source/Cargo.toml
+++ b/application/application/source/Cargo.toml
@@ -38,8 +38,7 @@ http = { package = "http", version = "=1.1.0", default-features = true, features
 http-body-util = { package = "http-body-util", version = "=0.1.2", default-features = true, features = [], optional = false }
 hyper = { package = "hyper", version = "=1.4.1", default-features = true, features = ["full"], optional = false }
 hyper_util = { package = "hyper-util", version = "=0.1.8", default-features = true, features = ["full"], optional = false }
-lettre = { package = "lettre", version = "=0.9.6", default-features = true, features = [], optional = false }# ЗАМЕНИТЬ# ЗАМЕНИТЬ# ЗАМЕНИТЬ# ЗАМЕНИТЬ# ЗАМЕНИТЬ
-lettre_email = { package = "lettre_email", version = "=0.9.4", default-features = true, features = [], optional = false }# ЗАМЕНИТЬ# ЗАМЕНИТЬ# ЗАМЕНИТЬ# ЗАМЕНИТЬ# ЗАМЕНИТЬ
+lettre = { package = "lettre", version = "=0.11.9", default-features = false, features = ["smtp-transport", "hostname", "builder", "tokio1"], optional = false }
 matchit = { package = "matchit", version = "=0.8.4", default-features = true, features = [], optional = false }
 message_pack_serializer = { path = "./forced_crate/message_pack_serializer", package = "message_pack_serializer", version = "=1.0.0", default-features = true, features = [], optional = false }
 rand = { package = "rand", version = "=0.8.5", default-features = true, features = [], optional = false }
