--- a/application/application/source/Cargo.toml
+++ b/application/application/source/Cargo.toml
@@ -25,6 +25,7 @@ workspace = true
 [dependencies]
 action_processor_incoming_outcoming = { path = "./forced_crate/action_processor_incoming_outcoming", package = "action_processor_incoming_outcoming", version = "=1.0.0", default-features = true, features = [], optional = false }
 aggregate_error = { path = "./forced_crate/aggregate_error", package = "aggregate_error", version = "=1.0.0", default-features = true, features = [], optional = false }
+application_user_access_token_encrypted = { path = "./forced_crate/application_user_access_token_encrypted", package = "application_user_access_token_encrypted", version = "=1.0.0", default-features = true, features = [], optional = false }
 argon2 = { package = "argon2", version = "=0.5.3", default-features = true, features = ["std"], optional = false }
 base64 = { package = "base64", version = "=0.22.1", default-features = true, features = [], optional = false }
 bb8 = { package = "bb8", version = "=0.8.5", default-features = true, features = [], optional = false }
