--- a/application/application/source/forced_crate/action_processor_incoming_outcoming/Cargo.toml
+++ b/application/application/source/forced_crate/action_processor_incoming_outcoming/Cargo.toml
@@ -22,9 +22,10 @@ edition = "2021"
 workspace = true
 
 [dependencies]
-serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
+application_user_access_token_encrypted = { path = "./../application_user_access_token_encrypted", package = "application_user_access_token_encrypted", version = "=1.0.0", default-features = true, features = [], optional = false }
 common_precedent = { path = "./../common_precedent", package = "common_precedent", version = "=1.0.0", default-features = true, features = [], optional = false }
 macro_rules = { path = "./../macro_rules", package = "macro_rules", version = "=1.0.0", default-features = true, features = [], optional = false }
+serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
 
 [features]
 default = []
