--- a/application/application/Cargo.toml
+++ b/application/application/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "./source",
     "./source/forced_crate/action_processor_incoming_outcoming",
     "./source/forced_crate/aggregate_error",
+    "./source/forced_crate/application_user_access_refresh_token_encrypted",
     "./source/forced_crate/application_user_access_token_encrypted",
     "./source/forced_crate/common_precedent",
     "./source/forced_crate/formatter",
@@ -17,6 +18,7 @@ default-members = [
     "./source",
     "./source/forced_crate/action_processor_incoming_outcoming",
     "./source/forced_crate/aggregate_error",
+    "./source/forced_crate/application_user_access_refresh_token_encrypted",
     "./source/forced_crate/application_user_access_token_encrypted",
     "./source/forced_crate/common_precedent",
     "./source/forced_crate/formatter",
