--- a/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
+++ b/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
@@ -90,6 +90,7 @@ needless_continue = { level = "allow", priority = 0 }
 needless_for_each = { level = "deny", priority = 0 }
 needless_lifetimes = { level = "allow", priority = 0 }
 needless_pass_by_ref_mut = { level = "deny", priority = 0 }
+needless_question_mark = { level = "deny", priority = 0 }
 needless_return = { level = "allow", priority = 0 }
 new_without_default = { level = "allow", priority = 0 }
 not_unsafe_ptr_arg_deref = { level = "allow", priority = 0 }
