--- a/application/application/source/Cargo.toml
+++ b/application/application/source/Cargo.toml
@@ -25,12 +25,11 @@ workspace = true
 [dependencies]
 action_processor_incoming_outcoming = { path = "./forced_crate/action_processor_incoming_outcoming", package = "action_processor_incoming_outcoming", version = "=1.0.0", default-features = true, features = [], optional = false }
 aggregate_error = { path = "./forced_crate/aggregate_error", package = "aggregate_error", version = "=1.0.0", default-features = true, features = [], optional = false }
-user_access_refresh_token_encoded = { path = "./forced_crate/user_access_refresh_token_encoded", package = "user_access_refresh_token_encoded", version = "=1.0.0", default-features = true, features = [], optional = false }
-user_access_token_encoded = { path = "./forced_crate/user_access_token_encoded", package = "user_access_token_encoded", version = "=1.0.0", default-features = true, features = [], optional = false }
 argon2 = { package = "argon2", version = "=0.5.3", default-features = true, features = ["std"], optional = false }
 base64 = { package = "base64", version = "=0.22.1", default-features = true, features = [], optional = false }
 bb8 = { package = "bb8", version = "=0.8.5", default-features = true, features = [], optional = false }
 bb8_postgres = { package = "bb8-postgres", version = "=0.8.1", default-features = true, features = [], optional = false }
+bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }
 bytes = { package = "bytes", version = "=1.7.1", default-features = true, features = [], optional = false }
 chrono = { package = "chrono", version = "=0.4.38", default-features = true, features = [], optional = false }
 const_format = { package = "const_format", version = "=0.2.33", default-features = true, features = [], optional = true }
@@ -55,6 +54,8 @@ tracing = { package = "tracing", version = "=0.1.40", default-features = true, f
 tracing-appender = { package = "tracing-appender", version = "=0.2.3", default-features = true, features = [], optional = false }
 tracing-subscriber = { package = "tracing-subscriber", version = "=0.3.18", default-features = true, features = [], optional = false }
 unified_report = { path = "./forced_crate/unified_report", package = "unified_report", version = "=1.0.0", default-features = true, features = [], optional = false }
+user_access_refresh_token_encoded = { path = "./forced_crate/user_access_refresh_token_encoded", package = "user_access_refresh_token_encoded", version = "=1.0.0", default-features = true, features = [], optional = false }
+user_access_token_encoded = { path = "./forced_crate/user_access_token_encoded", package = "user_access_token_encoded", version = "=1.0.0", default-features = true, features = [], optional = false }
 uuid = { package = "uuid", version = "=1.10.0", default-features = true, features = ["v4"], optional = false }
 void = { path = "./forced_crate/void", package = "void", version = "=1.0.0", default-features = true, features = [], optional = false }
 
