--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@
 docker-compose.override.yaml
 environment.toml
 target
-/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.lock
+Cargo.lock
