--- a/application/application/source/forced_crate/action_processor_incoming_outcoming/Cargo.toml
+++ b/application/application/source/forced_crate/action_processor_incoming_outcoming/Cargo.toml
@@ -27,6 +27,7 @@ user_access_token_encoded = { path = "./../user_access_token_encoded", package =
 common_precedent = { path = "./../common_precedent", package = "common_precedent", version = "=1.0.0", default-features = true, features = [], optional = false }
 macro_rules = { path = "./../macro_rules", package = "macro_rules", version = "=1.0.0", default-features = true, features = [], optional = false }
 serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
+bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }
 
 [features]
 default = []
