--- a/application/application/source/forced_crate/unified_report/Cargo.toml
+++ b/application/application/source/forced_crate/unified_report/Cargo.toml
@@ -23,6 +23,7 @@ workspace = true
 
 [dependencies]
 serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
+bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }
 
 [features]
 default = []
