--- a/application/application/source/Cargo.toml
+++ b/application/application/source/Cargo.toml
@@ -25,12 +25,11 @@ workspace = true
 [dependencies]
 argon2 = { package = "argon2", version = "=0.5.3", default-features = true, features = ["std"], optional = false }
 base64 = { package = "base64", version = "=0.22.1", default-features = true, features = [], optional = false }
-bb8 = { package = "bb8", version = "=0.8.5", default-features = true, features = [], optional = false }
-bb8_postgres = { package = "bb8-postgres", version = "=0.8.1", default-features = true, features = [], optional = false }
 bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }
 bytes = { package = "bytes", version = "=1.7.1", default-features = true, features = [], optional = false }
 chrono = { package = "chrono", version = "=0.4.38", default-features = true, features = [], optional = false }
 const_format = { package = "const_format", version = "=0.2.33", default-features = true, features = [], optional = true }
+deadpool_postgres = { package = "deadpool-postgres", version = "=0.14.0", default-features = true, features = [], optional = false }
 dedicated_crate = { path = "./dedicated_crate", package = "dedicated_crate", version = "=1.0.0", default-features = true, features = [], optional = false }
 hmac = { package = "hmac", version = "=0.12.1", default-features = true, features = [], optional = false }
 http = { package = "http", version = "=1.1.0", default-features = true, features = [], optional = false }
@@ -39,18 +38,18 @@ hyper = { package = "hyper", version = "=1.4.1", default-features = true, featur
 hyper_util = { package = "hyper-util", version = "=0.1.8", default-features = true, features = ["full"], optional = false }
 lettre = { package = "lettre", version = "=0.11.9", default-features = false, features = ["smtp-transport", "hostname", "builder", "tokio1"], optional = false }
 matchit = { package = "matchit", version = "=0.8.4", default-features = true, features = [], optional = false }
-num-integer = { package = "num-integer", version = "=0.1.46", default-features = true, features = [], optional = false }
+num_integer = { package = "num-integer", version = "=0.1.46", default-features = true, features = [], optional = false }
 rand = { package = "rand", version = "=0.8.5", default-features = true, features = [], optional = false }
 regex = { package = "regex", version = "=1.10.6", default-features = true, features = [], optional = false }
 serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
 serde_json = { package = "serde_json", version = "=1.0.128", default-features = true, features = [], optional = true }
 sha3 = { package = "sha3", version = "=0.10.8", default-features = true, features = [], optional = false }
 tokio = { package = "tokio", version = "=1.40.0", default-features = true, features = ["full"], optional = false }
-tokio_postgres = { package = "tokio-postgres", version = "=0.7.11", default-features = true, features = [], optional = false }
+tokio_postgres = { package = "tokio-postgres", version = "=0.7.12", default-features = true, features = [], optional = false }
 toml = { package = "toml", version = "=0.8.19", default-features = true, features = [], optional = false }
 tracing = { package = "tracing", version = "=0.1.40", default-features = true, features = [], optional = false }
-tracing-appender = { package = "tracing-appender", version = "=0.2.3", default-features = true, features = [], optional = false }
-tracing-subscriber = { package = "tracing-subscriber", version = "=0.3.18", default-features = true, features = [], optional = false }
+tracing_appender = { package = "tracing-appender", version = "=0.2.3", default-features = true, features = [], optional = false }
+tracing_subscriber = { package = "tracing-subscriber", version = "=0.3.18", default-features = true, features = [], optional = false }
 uuid = { package = "uuid", version = "=1.10.0", default-features = true, features = ["v4"], optional = false }
 
 [build-dependencies]
@@ -60,6 +59,7 @@ uuid = { package = "uuid", version = "=1.10.0", default-features = true, feature
 [features]
 default = []
 logging_to_file = []
+postgresql_connection_with_tls = []
 serde_for_manual_test = [
     "dedicated_crate/serde_for_manual_test",
 ]
