--- a/application/application/environment.example.toml
+++ b/application/application/environment.example.toml
@@ -98,11 +98,29 @@ value = "log"
 
 [resource.postgresql]
 
-[resource.postgresql.database_1_url]
+[resource.postgresql.database_1]
+
+[resource.postgresql.database_1.url]
 value = "postgres://root:password@database_1_postgresql/tento"
 
-[resource.postgresql.database_2_url]
+[resource.postgresql.database_1.maximum_connection_pool_size]
+value = 1
+
+# In milliseconds.
+[resource.postgresql.database_1.connection_pool_waiting_timeout_duration]
+value = 300
+
+[resource.postgresql.database_2]
+
+[resource.postgresql.database_2.url]
 value = "postgres://root:password@database_2_postgresql/tento"
+
+[resource.postgresql.database_2.maximum_connection_pool_size]
+value = 1
+
+# In milliseconds.
+[resource.postgresql.database_2.connection_pool_waiting_timeout_duration]
+value = 300
 
 [resource.email_server]
 
