--- a/application/application/Cargo.toml
+++ b/application/application/Cargo.toml
@@ -15,6 +15,12 @@ default-members = [
 authors = ["Zimin Dmitriy <dimazimin96@yandex.ru>"]
 rust-version = "1.80.0"
 
+[workspace.dependencies]
+
+
+
+
+
 [workspace.lints]
 
 [workspace.lints.rust]
@@ -142,9 +148,9 @@ overflow-checks = true
 lto = "fat"
 panic = "unwind"
 incremental = false
-codegen-units = 16
+codegen-units = 1
 rpath = false
 
 [profile.release.build-override]
 opt-level = 3
-codegen-units = 16
+codegen-units = 1
