--- a/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
+++ b/application/application/source/foreign_function_interface/client_server_data_serializer/source/Cargo.toml
@@ -20,8 +20,8 @@ rust-version.workspace = true
 build = "./build.rs"
 
 [dependencies]
-bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }
-dedicated_crate = { path = "./../../../dedicated_crate", package = "dedicated_crate", version = "=1.0.0", default-features = true, features = [], optional = false }
+bitcode = { workspace = true }
+dedicated_crate = { workspace = true }
 libc = { package = "libc", version = "=0.2.158", default-features = true, features = [], optional = false }
 
 [build-dependencies]
