--- a/application/application/source/dedicated_crate/Cargo.toml
+++ b/application/application/source/dedicated_crate/Cargo.toml
@@ -22,8 +22,8 @@ edition = "2021"
 workspace = true
 
 [dependencies]
-bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }
-serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = true }
+bitcode = { workspace = true }
+serde = { workspace = true, optional = true }
 
 [features]
 default = []
