--- a/development_environment/resource/docker/service/diesel/dockerfile
+++ b/development_environment/resource/docker/service/diesel/dockerfile
@@ -1,5 +1,5 @@
 FROM rust:1.80.0
-
 RUN \
-mkdir -p /_tento && \
-cargo install diesel_cli --no-default-features --features postgres
+    mkdir -p /_tento
+RUN \
+    cargo install diesel_cli --no-default-features --features postgres
