--- a/development_environment/resource/docker/service/postgresql/dockerfile
+++ b/development_environment/resource/docker/service/postgresql/dockerfile
@@ -1,22 +1,20 @@
 FROM postgres:17
-
 RUN \
-rm -rf \
-    /usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample \
-    /usr/share/postgresql/$PG_MAJOR/pg_hba.conf.sample \
-    /usr/share/postgresql/$PG_MAJOR/pg_ident.conf.sample \
-    /var/lib/apt/lists/* \
-    /tmp/pear
-
+    rm -rf \
+        /usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample \
+        /usr/share/postgresql/$PG_MAJOR/pg_hba.conf.sample \
+        /usr/share/postgresql/$PG_MAJOR/pg_ident.conf.sample \
+        /var/lib/apt/lists/* \
+        /tmp/pear
 COPY ./configuration/postgresql.conf /usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample
 COPY ./configuration/pg_hba.conf /usr/share/postgresql/$PG_MAJOR/pg_hba.conf.sample
 COPY ./configuration/pg_ident.conf /usr/share/postgresql/$PG_MAJOR/pg_ident.conf.sample
-
 RUN \
-chmod -R 644 \
-    /usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample \
-    /usr/share/postgresql/$PG_MAJOR/pg_hba.conf.sample \
-    /usr/share/postgresql/$PG_MAJOR/pg_ident.conf.sample \
-&& rm -rf \
+    chmod -R 644 \
+        /usr/share/postgresql/$PG_MAJOR/postgresql.conf.sample \
+        /usr/share/postgresql/$PG_MAJOR/pg_hba.conf.sample \
+        /usr/share/postgresql/$PG_MAJOR/pg_ident.conf.sample
+RUN \
+    rm -rf \
        /var/lib/apt/lists/* \
        /tmp/pear
